RESOLVED FIXED102397
[BlackBerry] Fix suspend/resume assertion in setCompositor()
https://bugs.webkit.org/show_bug.cgi?id=102397
Summary [BlackBerry] Fix suspend/resume assertion in setCompositor()
Jakob Petsovits
Reported 2012-11-15 09:00:06 PST
If a compositor is used but no surface pool is ever allocated (which is a perfectly valid use case), initial suspension of the backingstore is skipped because of an early return. This will cause an assertion to be triggered and a bug. Fix this by suspending it before the return. With Adam Treat's recent change to split suspension of screen and backingstore into two different functions, this can now be reduced to a mere screen (blitting) suspension. That was the original intention of this code.
Attachments
Patch (4.04 KB, patch)
2012-11-15 09:03 PST, Jakob Petsovits
no flags
Jakob Petsovits
Comment 1 2012-11-15 09:03:26 PST
WebKit Review Bot
Comment 2 2012-11-15 09:58:17 PST
Comment on attachment 174459 [details] Patch Clearing flags on attachment: 174459 Committed r134788: <http://trac.webkit.org/changeset/134788>
WebKit Review Bot
Comment 3 2012-11-15 09:58:20 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.